# ultra-search

./: .env.example  .mcp.json  CLAUDE.md  README.md  intro-chat.txt  other-domains.txt  pyproject.toml
config/: settings.yaml
docs/: async-research-guide.md  carrier-vetting-guide.md  file-output-guide.md  parallel-ai-integration.md
src/ultra_search/: __init__.py
src/ultra_search/core/: __init__.py  base.py  config.py  executor.py  file_output.py  models.py  registry.py  task_queue.py
src/ultra_search/domains/: __init__.py
src/ultra_search/domains/academic/: __init__.py  domain.py
src/ultra_search/domains/academic/providers/: __init__.py
src/ultra_search/domains/deep_research/: __init__.py  async_tools.py  domain.py
src/ultra_search/domains/deep_research/providers/: __init__.py  base.py  openai_provider.py  parallel_tasks.py  perplexity.py
src/ultra_search/domains/financial/: __init__.py  domain.py
src/ultra_search/domains/financial/providers/: __init__.py
src/ultra_search/domains/news/: __init__.py  domain.py
src/ultra_search/domains/news/providers/: __init__.py
src/ultra_search/domains/regulatory_compliance/: __init__.py  domain.py
src/ultra_search/domains/regulatory_compliance/providers/: __init__.py  fmcsa.py  middesk.py
src/ultra_search/domains/reviews/: __init__.py  domain.py
src/ultra_search/domains/risk_screening/: __init__.py  domain.py
src/ultra_search/domains/scraping/: __init__.py  domain.py
src/ultra_search/domains/web_search/: __init__.py  domain.py
src/ultra_search/mcp_server/: __init__.py  server.py
(+14 files in other folders)
